domain-vpc/domain-vpc-template.yaml
AWSTemplateFormatVersion: 2010-09-09

# This template creates a VPC, 3 private subnets in 3 different
# availability zones (to be used with SageMaker Unified Studio), and a public subnet
# to allow connectivity to internet. The template creates a route from each
# private subnets to a NAT gateway with EIP in the public subnet, and
# a route in the public subnet to an IGW.
# This setup enables internet connectivity from SageMaker Unified Studio VPC which allows
# usage of all AWS services.

Parameters:
  useVpcEndpoints:
    Type: String
    AllowedValues:
      - true
      - false
    Default: false
    Description: >
      You are not required to use VPC endpoints with Amazon SageMaker Unified Studio. The data sent via VPC endpoints that interacts with the AWS
      services does not leave the AWS network and does not reach public internet. If you choose to create VPC endpoints for more secure
      communication, you might incur extra charges. For more information, see AWS PrivateLink pricing at
      https://aws.amazon.com/privatelink/pricing/.

Mappings:
  # found with describe-vpc-endpoint-services --service-names com.amazonaws.<region>.redshift-serverless
  # AZ IDs are fetched with aws ec2 describe-availability-zones --region <region> --query 'AvailabilityZones[*].[ZoneName, ZoneId]' --output text
  AvailabilityZonesId:
    eu-west-1:
      AZ1: euw1-az1
      AZ2: euw1-az2
      AZ3: euw1-az3
      AZ4: ""
      AZ5: ""
      AZ6: ""
    us-east-1:
      AZ1: use1-az1
      AZ2: use1-az2
      AZ3: use1-az3
      AZ4: use1-az4
      AZ5: use1-az5
      AZ6: use1-az6
    us-west-2:
      AZ1: usw2-az1
      AZ2: usw2-az2
      AZ3: usw2-az3
      AZ4: usw2-az4
      AZ5: ""
      AZ6: ""
    us-east-2:
      AZ1: use2-az1
      AZ2: use2-az2
      AZ3: use2-az3
      AZ4: ""
      AZ5: ""
      AZ6: ""
    eu-central-1:
      AZ1: euc1-az2
      AZ2: euc1-az3
      AZ3: euc1-az1
      AZ4: ""
      AZ5: ""
      AZ6: ""
    sa-east-1:
      AZ1: sae1-az1
      AZ2: sae1-az2
      AZ3: sae1-az3
      AZ4: ""
      AZ5: ""
      AZ6: ""
    ap-northeast-2:
      AZ1: apne2-az1
      AZ2: apne2-az2
      AZ3: apne2-az3
      AZ4: apne2-az4
      AZ5: ""
      AZ6: ""
    eu-west-2:
      AZ1: euw2-az2
      AZ2: euw2-az3
      AZ3: euw2-az1
      AZ4: ""
      AZ5: ""
      AZ6: ""
    ap-northeast-1:
      AZ1: apne1-az4
      AZ2: apne1-az1
      AZ3: apne1-az2
      AZ4: apne1-az3
      AZ5: ""
      AZ6: ""
    ap-southeast-1:
      AZ1: apse1-az2
      AZ2: apse1-az1
      AZ3: apse1-az3
      AZ4: ""
      AZ5: ""
      AZ6: ""
    ap-southeast-2:
      AZ1: apse2-az3
      AZ2: apse2-az1
      AZ3: apse2-az2
      AZ4: ""
      AZ5: ""
      AZ6: ""
    ca-central-1:
      AZ1: cac1-az1
      AZ2: cac1-az2
      AZ3: cac1-az4
      AZ4: ""
      AZ5: ""
      AZ6: ""
    ap-south-1:
      AZ1: aps1-az1
      AZ2: aps1-az2
      AZ3: aps1-az3
      AZ4: ""
      AZ5: ""
      AZ6: ""
    eu-west-3:
      AZ1: euw3-az1
      AZ2: euw3-az2
      AZ3: euw3-az3
      AZ4: ""
      AZ5: ""
      AZ6: ""
    eu-north-1:
      AZ1: eun1-az1
      AZ2: eun1-az2
      AZ3: eun1-az3
      AZ4: ""
      AZ5: ""
      AZ6: ""
    af-south-1:
      AZ1: afs1-az1
      AZ2: afs1-az2
      AZ3: afs1-az3
      AZ4: ""
      AZ5: ""
      AZ6: ""
    ap-east-1:
      AZ1: ape1-az1
      AZ2: ape1-az2
      AZ3: ape1-az3
      AZ4: ""
      AZ5: ""
      AZ6: ""
    eu-south-2:
      AZ1: eus2-az1
      AZ2: eus2-az2
      AZ3: eus2-az3
      AZ4: ""
      AZ5: ""
      AZ6: ""
    eu-central-2:
      AZ1: euc2-az1
      AZ2: euc2-az2
      AZ3: euc2-az3
      AZ4: ""
      AZ5: ""
      AZ6: ""
Conditions:
  useVpcEndpoints: !Equals [!Ref useVpcEndpoints, "true"]

  codeWhispererEnabledRegion: !Equals [!Ref "AWS::Region", 'us-east-1']
  qEnabledRegion: !Equals [!Ref "AWS::Region", 'us-east-1']
  isUSEast1: !Equals [!Ref "AWS::Region", 'us-east-1']
  isSAEast1: !Equals [!Ref "AWS::Region", 'sa-east-1']
  isCACentral1: !Equals [!Ref "AWS::Region", 'ca-central-1']
  
  hasAZ1ForRegion: !Not [!Equals [!FindInMap [AvailabilityZonesId, !Ref "AWS::Region", AZ1], ""]]
  hasAZ2ForRegion: !Not [!Equals [!FindInMap [AvailabilityZonesId, !Ref "AWS::Region", AZ2], ""]]
  hasAZ3ForRegion: !Not [!Equals [!FindInMap [AvailabilityZonesId, !Ref "AWS::Region", AZ3], ""]]
  hasAZ4ForRegion: !Not [!Equals [!FindInMap [AvailabilityZonesId, !Ref "AWS::Region", AZ4], ""]]
  hasAZ5ForRegion: !Not [!Equals [!FindInMap [AvailabilityZonesId, !Ref "AWS::Region", AZ5], ""]]
  hasAZ6ForRegion: !Not [!Equals [!FindInMap [AvailabilityZonesId, !Ref "AWS::Region", AZ6], ""]]
  
  createVPCEWithTwoSubnets: !And [!Condition useVpcEndpoints, !Condition hasAZ1ForRegion, !Condition hasAZ2ForRegion, !Not [!Condition hasAZ3ForRegion]]
  createVPCEWithThreeSubnets: !And [!Condition useVpcEndpoints, !Condition hasAZ1ForRegion, !Condition hasAZ2ForRegion, !Condition hasAZ3ForRegion]

  createVPCEWithTwoSubnetsRedshiftServerless: !And [!Condition useVpcEndpoints, !Condition hasAZ1ForRegion, !Condition hasAZ2ForRegion, !Not [!Condition hasAZ3ForRegion]]
  createVPCEWithThreeSubnetsRedshiftServerlessNotUSEast1: !And [!Condition useVpcEndpoints, !Condition hasAZ1ForRegion, !Condition hasAZ2ForRegion, !Condition hasAZ3ForRegion, !Not [!Condition isUSEast1]]
  createVPCEWithThreeSubnetsRedshiftServerlessUSEast1: !And [!Condition useVpcEndpoints, !Condition hasAZ1ForRegion, !Condition hasAZ2ForRegion, !Condition hasAZ6ForRegion, !Condition isUSEast1]

  createVPCEWithTwoSubnetsCodeWhisperer: !And [!Condition useVpcEndpoints, !Condition codeWhispererEnabledRegion, !Condition createVPCEWithTwoSubnets]
  createVPCEWithThreeSubnetsCodeWhisperer: !And [!Condition useVpcEndpoints, !Condition codeWhispererEnabledRegion, !Condition createVPCEWithThreeSubnets]

  createVPCEWithTwoSubnetsQ: !And [!Condition useVpcEndpoints, !Condition qEnabledRegion, !Condition createVPCEWithTwoSubnets]
  createVPCEWithThreeSubnetsQ: !And [!Condition useVpcEndpoints, !Condition qEnabledRegion, !Condition createVPCEWithThreeSubnets]

  createVPCEWithTwoSubnetsCodeCommit: !And [!Condition useVpcEndpoints, !Condition isSAEast1]
  createVPCEWithThreeSubnetsCodeCommit: !And [!Condition useVpcEndpoints, !Not [!Condition isSAEast1]]

  createVPCEWithTwoSubnetsGitCodeCommit: !And [!Condition useVpcEndpoints, !Condition isSAEast1]
  createVPCEWithThreeSubnetsGitCodeCommit: !And [!Condition useVpcEndpoints, !Not [!Condition isSAEast1]]

  createVPCEWithTwoSubnetsEMR: !And [!Condition useVpcEndpoints, !Condition isCACentral1]
  createVPCEWithThreeSubnetsEMR: !And [!Condition useVpcEndpoints, !Not [!Condition isCACentral1]]

  createVPCEWithTwoSubnetsRedshift: !And [!Condition useVpcEndpoints, !Condition isCACentral1]
  createVPCEWithThreeSubnetsRedshift: !And [!Condition useVpcEndpoints, !Not [!Condition isCACentral1]]

Resources:
  SageMakerUnifiedStudioVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.38.0.0/16"
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
        - Key: Name
          Value: 'SageMakerUnifiedStudioVPC'
        - Key: for-use-with-amazon-emr-managed-policies
          Value: true
  
  SageMakerUnifiedStudioSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for the VPC-endpoints.
      GroupName: 'sagemaker-unified-studio-vpc-endpoint'
      SecurityGroupEgress:
        - Description: Allows outbound HTTPS access to any IPv4 address
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - Description: Allows inbound HTTPS access for traffic from VPC
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 10.38.0.0/16
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
      VpcId: !Ref SageMakerUnifiedStudioVpc


  SageMakerUnifiedStudioPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: "10.38.224.0/21"
      VpcId: !Ref SageMakerUnifiedStudioVpc
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
        - Key: Name
          Value: 'SageMakerUnifiedStudioPublicSubnet'
        - Key: for-use-with-amazon-emr-managed-policies
          Value: true

  PublicRouteTableIGWRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref SageMakerUnifiedStudioVpcInternetGateway
      RouteTableId: !Ref PublicRouteTable

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref SageMakerUnifiedStudioVpc
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref SageMakerUnifiedStudioPublicSubnet

  SageMakerUnifiedStudioPrivateSubnet1:
    Condition: hasAZ1ForRegion
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZoneId: !FindInMap [AvailabilityZonesId, !Ref "AWS::Region", AZ1]
      CidrBlock: "10.38.192.0/21"
      VpcId: !Ref SageMakerUnifiedStudioVpc
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
        - Key: Name
          Value: 'SageMakerUnifiedStudioPrivateSubnet1'
        - Key: for-use-with-amazon-emr-managed-policies
          Value: true

  SageMakerUnifiedStudioPrivateSubnet2:
    Condition: hasAZ2ForRegion
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZoneId: !FindInMap [AvailabilityZonesId, !Ref "AWS::Region", AZ2]
      CidrBlock: "10.38.200.0/21"
      VpcId: !Ref SageMakerUnifiedStudioVpc
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
        - Key: Name
          Value: 'SageMakerUnifiedStudioPrivateSubnet2'
        - Key: for-use-with-amazon-emr-managed-policies
          Value: true

  SageMakerUnifiedStudioPrivateSubnet3:
    Condition: hasAZ3ForRegion
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZoneId: !FindInMap [AvailabilityZonesId, !Ref "AWS::Region", AZ3]
      CidrBlock: "10.38.208.0/21"
      VpcId: !Ref SageMakerUnifiedStudioVpc
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
        - Key: Name
          Value: 'SageMakerUnifiedStudioPrivateSubnet3'
        - Key: for-use-with-amazon-emr-managed-policies
          Value: true
  
  SageMakerUnifiedStudioPrivateSubnet4:
    Condition: hasAZ4ForRegion
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZoneId: !FindInMap [AvailabilityZonesId, !Ref "AWS::Region", AZ4]
      CidrBlock: "10.38.216.0/21"
      VpcId: !Ref SageMakerUnifiedStudioVpc
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
        - Key: Name
          Value: 'SageMakerUnifiedStudioPrivateSubnet4'
        - Key: for-use-with-amazon-emr-managed-policies
          Value: true

  SageMakerUnifiedStudioPrivateSubnet5:
    Condition: hasAZ5ForRegion
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZoneId: !FindInMap [AvailabilityZonesId, !Ref "AWS::Region", AZ5]
      CidrBlock: "10.38.232.0/21"
      VpcId: !Ref SageMakerUnifiedStudioVpc
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
        - Key: Name
          Value: 'SageMakerUnifiedStudioPrivateSubnet5'
        - Key: for-use-with-amazon-emr-managed-policies
          Value: true

  SageMakerUnifiedStudioPrivateSubnet6:
    Condition: hasAZ6ForRegion
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZoneId: !FindInMap [AvailabilityZonesId, !Ref "AWS::Region", AZ6]
      CidrBlock: "10.38.240.0/21"
      VpcId: !Ref SageMakerUnifiedStudioVpc
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
        - Key: Name
          Value: 'SageMakerUnifiedStudioPrivateSubnet6'
        - Key: for-use-with-amazon-emr-managed-policies
          Value: true

  SageMakerUnifiedStudioEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  SageMakerUnifiedStudioVpcInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  SageMakerUnifiedStudioVpcInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref SageMakerUnifiedStudioVpcInternetGateway
      VpcId: !Ref SageMakerUnifiedStudioVpc

  SageMakerUnifiedStudioPublicSubnetNATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt SageMakerUnifiedStudioEIP.AllocationId
      SubnetId: !Ref SageMakerUnifiedStudioPublicSubnet
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  SageMakerUnifiedStudioRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref SageMakerUnifiedStudioVpc
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref SageMakerUnifiedStudioRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref SageMakerUnifiedStudioPublicSubnetNATGateway

  PrivateSubnetRouteTableAssociation1:
    Condition: hasAZ1ForRegion
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SageMakerUnifiedStudioRouteTable
      SubnetId: !Ref SageMakerUnifiedStudioPrivateSubnet1

  PrivateSubnetRouteTableAssociation2:
    Condition: hasAZ2ForRegion
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SageMakerUnifiedStudioRouteTable
      SubnetId: !Ref SageMakerUnifiedStudioPrivateSubnet2

  PrivateSubnetRouteTableAssociation3:
    Condition: hasAZ3ForRegion
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SageMakerUnifiedStudioRouteTable
      SubnetId: !Ref SageMakerUnifiedStudioPrivateSubnet3
  
  PrivateSubnetRouteTableAssociation4:
    Condition: hasAZ4ForRegion
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SageMakerUnifiedStudioRouteTable
      SubnetId: !Ref SageMakerUnifiedStudioPrivateSubnet4

  PrivateSubnetRouteTableAssociation5:
    Condition: hasAZ5ForRegion
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SageMakerUnifiedStudioRouteTable
      SubnetId: !Ref SageMakerUnifiedStudioPrivateSubnet5

  PrivateSubnetRouteTableAssociation6:
    Condition: hasAZ6ForRegion
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SageMakerUnifiedStudioRouteTable
      SubnetId: !Ref SageMakerUnifiedStudioPrivateSubnet6

  ############################################################
  # Glue VPC-E
  ############################################################
  SageMakerUnifiedStudioGlueVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.glue'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  SageMakerUnifiedStudioGlueVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.glue'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  ############################################################
  # EMR Serverless VPC-E
  ############################################################
  SageMakerUnifiedStudioEMRServerlessVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.emr-serverless'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  SageMakerUnifiedStudioEMRServerlessVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.emr-serverless'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  ############################################################
  # EMR on EKS VPC-E
  ############################################################
  SageMakerUnifiedStudioEMRonEKSVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.emr-containers'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  SageMakerUnifiedStudioEMRonEKSVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.emr-containers'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  ############################################################
  # CodeCommit VPC-E
  ############################################################
  SageMakerUnifiedStudioCodeCommitVpcEndpointA:
    Condition: createVPCEWithTwoSubnetsCodeCommit
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.codecommit'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
      
  
  SageMakerUnifiedStudioCodeCommitVpcEndpointB:
    Condition: createVPCEWithThreeSubnetsCodeCommit
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.codecommit'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  ############################################################
  # Git CodeCommit VPC-E
  ############################################################
  SageMakerUnifiedStudioGitCodeCommitVpcEndpointA:
    Condition: createVPCEWithTwoSubnetsGitCodeCommit
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.git-codecommit'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  SageMakerUnifiedStudioGitCodeCommitVpcEndpointB:
    Condition: createVPCEWithThreeSubnetsGitCodeCommit
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.git-codecommit'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  ############################################################
  # STS VPC-E
  ############################################################      
  SageMakerUnifiedStudioStsVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.sts'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  SageMakerUnifiedStudioStsVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.sts'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  ############################################################
  # S3 VPC-E
  ############################################################
  SageMakerUnifiedStudioS3VpcEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
      VpcEndpointType: Gateway
      VpcId: !Ref SageMakerUnifiedStudioVpc
      RouteTableIds:
        - !Ref SageMakerUnifiedStudioRouteTable
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  ############################################################
  # SageMaker API VPC-E
  ############################################################
  SageMakerUnifiedStudioSageMakerApiVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.sagemaker.api'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  SageMakerUnifiedStudioSageMakerApiVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.sagemaker.api'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  ############################################################
  # SageMaker Runtime VPC-E
  ############################################################
  SageMakerUnifiedStudioSageMakerRuntimeVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.sagemaker.runtime'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  SageMakerUnifiedStudioSageMakerRuntimeVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.sagemaker.runtime'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  ############################################################
  # Code Connections API VPC-E
  ############################################################
  SageMakerUnifiedStudioCodeConnectionVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.codeconnections.api'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  SageMakerUnifiedStudioCodeConnectionVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.codeconnections.api'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  ############################################################
  # Codestar Connections API VPC-E
  ############################################################
  SageMakerUnifiedStudioCodeStarVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.codestar-connections.api'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  SageMakerUnifiedStudioCodeStarVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.codestar-connections.api'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  ############################################################
  # Redshift Serverless VPC-E
  ############################################################
  SageMakerUnifiedStudioRedshiftServerlessVpcEndpointA:
    Condition: createVPCEWithTwoSubnetsRedshiftServerless
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.redshift-serverless'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  SageMakerUnifiedStudioRedshiftServerlessVpcEndpointB:
    Condition: createVPCEWithThreeSubnetsRedshiftServerlessNotUSEast1
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.redshift-serverless'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  SageMakerUnifiedStudioRedshiftServerlessVpcEndpointC:
    Condition: createVPCEWithThreeSubnetsRedshiftServerlessUSEast1
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.redshift-serverless'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet6
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  ############################################################
  # Redshift VPC-E
  ############################################################
  SageMakerUnifiedStudioRedshiftVpcEndpointA:
    Condition: createVPCEWithTwoSubnetsRedshift
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.redshift'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  SageMakerUnifiedStudioRedshiftVpcEndpointB:
    Condition: createVPCEWithThreeSubnetsRedshift
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.redshift'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  ############################################################
  # Redshift Data VPC-E
  ############################################################
  SageMakerUnifiedStudioRedshiftDataVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.redshift-data'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  SageMakerUnifiedStudioRedshiftDataVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.redshift-data'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  ############################################################
  # DataZone VPC-E
  ############################################################
  SageMakerUnifiedStudioDataZoneVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.datazone'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  SageMakerUnifiedStudioDataZoneVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.datazone'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  ############################################################
  # Secrets Manager VPC-E
  ############################################################
  SageMakerUnifiedStudioSecretsManagerVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.secretsmanager'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  SageMakerUnifiedStudioSecretsManagerVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.secretsmanager'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  ############################################################
  # SSM VPC-E
  ############################################################
  SageMakerUnifiedStudioSSMVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ssm'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  SageMakerUnifiedStudioSSMVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ssm'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  ############################################################
  # EC2 Messages VPC-E
  ############################################################
  SageMakerUnifiedStudioEC2MessagesVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ec2messages'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  SageMakerUnifiedStudioEC2MessagesVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ec2messages'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  ############################################################
  # KMS VPC-E
  ############################################################
  SageMakerUnifiedStudioKMSVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.kms'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  SageMakerUnifiedStudioKMSVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.kms'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  ############################################################
  # CloudWatch Logs VPC-E
  ############################################################
  SageMakerUnifiedStudioLogsVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.logs'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  SageMakerUnifiedStudioLogsVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.logs'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  ############################################################
  # Prometheus (APS) VPC-E
  ############################################################
  SageMakerUnifiedStudioPrometheusVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.aps-workspaces'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  SageMakerUnifiedStudioPrometheusVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.aps-workspaces'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  ############################################################
  # SSM Messages VPC-E
  ############################################################
  SageMakerUnifiedStudioSSMMessagesVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ssmmessages'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  SageMakerUnifiedStudioSSMMessagesVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ssmmessages'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  ############################################################
  # Athena VPC-E
  ############################################################
  SageMakerUnifiedStudioAthenaVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.athena'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  SageMakerUnifiedStudioAthenaVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.athena'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  ############################################################
  # EMR VPC-E
  ############################################################
  SageMakerUnifiedStudioEMRVpcEndpointA:
    Condition: createVPCEWithTwoSubnetsEMR
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.elasticmapreduce'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  SageMakerUnifiedStudioEMRVpcEndpointB:
    Condition: createVPCEWithThreeSubnetsEMR
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.elasticmapreduce'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  ############################################################
  # EC2 VPC-E
  ############################################################
  SageMakerUnifiedStudioEC2VpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ec2'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  SageMakerUnifiedStudioEC2VpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ec2'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  ############################################################
  # Code Whisperer VPC-E
  ############################################################
  SageMakerUnifiedStudioCodeWhispererVpcEndpointA:
    Condition: createVPCEWithTwoSubnetsCodeWhisperer
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.codewhisperer'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  SageMakerUnifiedStudioCodeWhispererVpcEndpointB:
    Condition: createVPCEWithThreeSubnetsCodeWhisperer
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.codewhisperer'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  ############################################################
  # Q VPC-E
  ############################################################
  SageMakerUnifiedStudioQVpcEndpointA:
    Condition: createVPCEWithTwoSubnetsQ
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.q'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true

  SageMakerUnifiedStudioQVpcEndpointB:
    Condition: createVPCEWithThreeSubnetsQ
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.q'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  ############################################################
  # Bedrock VPC-E
  ############################################################
  SageMakerUnifiedStudioBedrockVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.bedrock'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  SageMakerUnifiedStudioBedrockVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.bedrock'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  ############################################################
  # Bedrock Runtime VPC-E
  ############################################################
  SageMakerUnifiedStudioBedrockRuntimeVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.bedrock-runtime'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  SageMakerUnifiedStudioBedrockRuntimeVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.bedrock-runtime'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  ############################################################
  # Bedrock Agent VPC-E
  ############################################################
  SageMakerUnifiedStudioBedrockAgentVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.bedrock-agent'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  SageMakerUnifiedStudioBedrockAgentVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.bedrock-agent'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  ############################################################
  # Bedrock Agent Runtime VPC-E
  ############################################################
  SageMakerUnifiedStudioBedrockAgentRuntimeVpcEndpointA:
    Condition: createVPCEWithTwoSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.bedrock-agent-runtime'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
  
  SageMakerUnifiedStudioBedrockAgentRuntimeVpcEndpointB:
    Condition: createVPCEWithThreeSubnets
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.bedrock-agent-runtime'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      VpcId: !Ref SageMakerUnifiedStudioVpc
      SecurityGroupIds:
        - !Ref SageMakerUnifiedStudioSecurityGroup
      SubnetIds:
        - !Ref SageMakerUnifiedStudioPrivateSubnet1
        - !Ref SageMakerUnifiedStudioPrivateSubnet2
        - !Ref SageMakerUnifiedStudioPrivateSubnet3
      Tags:
        - Key: CreatedForUseWithSageMakerUnifiedStudio
          Value: true
